# empower-hiring

./: .gitignore  README.md  pyproject.toml
api/: .gitignore  main.py
api/config/: app_config.py
api/core/util/: json_helpers.py  string_helpers.py
api/data/: data_container.py
api/data/sql/: database.py  sql_repository_base.py
api/docs/: architecture.txt
api/domain/: application_container.py
api/domain/managers/: manager_base.py  manager_container.py  todo_manager.py  user_manager.py
api/domain/models/: model_base.py  todo_model.py  user_model.py
api/domain/repositories/: repository_container.py  todo_repository.py  user_repository.py
api/domain/schemas/: schema_base.py  todo.py  user.py
api/host/endpoints/: endpoints_base.py  todo_endpoints.py  user_endpoints.py
api/host/handler/: handler_base.py  handler_container.py  todo_handler.py  user_handler.py
postman_collection/: hitachi_endpoints.json
